--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@headlessui/react": "^1.7.16",
     "@heroicons/react": "^2.0.18",
     "@vercel/analytics": "^1.3.1",
+    "@vercel/speed-insights": "^1.0.12",
     "autoprefixer": "10.4.16",
     "classnames": "^2.3.2",
     "next": "^14.0.3",
