--- a/.gitignore
+++ b/.gitignore
@@ -235,7 +235,7 @@ fabric.properties
 .idea/CV.iml
 .idea/material_theme_project_new.xml
 .idea/modules.xml
-
+.idea/git_toolbox_blame.xml
 # --------------------------
 # " Other                  "
 # --------------------------
